Stop max_image_width overriding XML width settings. Decrease white space at top and bottom of PDF.
git-svn-id: file:///srv/svn/publican/trunk@1590 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -619,7 +619,6 @@ li p, li div.para {
 img {
 	display:block;
 	margin: 2em 0;
-	max-width: 55em;
 }
 
 .inlinemediaobject, .inlinemediaobject img {
